# model-router-hackathon

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml  requirements.txt
Intelligent Routing Analytics Dashboard/: README.md  index.html
Intelligent Routing Analytics Dashboard/src/app/: App.tsx
Intelligent Routing Analytics Dashboard/src/styles/: fonts.css  theme.css
business-website-template/src/: App.jsx  index.css
business-website-template/src/components/: Chatbot.jsx  index.js
dashboard/: app.py
data/alexa_qa/: alexa_qa.json  train.csv  validation.csv
docs/: architecture.drawio  architecture.html  gothic-design-board.html  models.md
openspec/: project.md
openspec/specs/dashboard/: spec.md
openspec/specs/data/: spec.md
openspec/specs/pipeline/: spec.md
src/: cli.py  config.py  constants.py  models.py  pipeline.py
src/classifier/: complexity.py
src/dashboard/: app.py
src/data/: scraper.py
src/decomposer/: __init__.py  decomposer.py
src/model_router/: __init__.py  classify.py  client.py  config.py  constants.py  decompose.py  heatmap.py  intent.py  models.py  pipeline.py  router.py  search.py  store.py  telemetry.py
src/reasoning/: __init__.py  deep_reasoning.py
src/router/: __init__.py  cascade.py  client.py  engine.py
src/scraper/: provider.py
src/search/: __init__.py  web_search.py
src/sot/: __init__.py  safety.py  source_of_truth.py
src/train/: embedder.py
tests/: test_classify.py  test_decompose.py  test_intent.py  test_pipeline.py  test_router.py  test_store.py  test_telemetry.py
(+4 files in other folders)
