[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-router"
version = "0.2.0"
description = "Cost-optimized LLM routing — classify complexity, pick cheapest capable model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "San20506"},
]
keywords = ["llm", "routing", "openrouter", "cost-optimization", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]
telemetry = [
    "langfuse>=2.55.0",
]
dev = [
    "pytest>=8.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["model_router*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
